Resolve stretchy images on safari

--- a/src/components/ProjectPage/style.css
+++ b/src/components/ProjectPage/style.css
@@ -49,7 +49,6 @@
 }
 
 .Project-Content-Image {
-  flex: 1;
   max-width: 100%;
   margin: 10px 0;
 }
